--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,6 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"); */
 @import url("menu.css");
+/* @import url("menu2.css"); */
 @import url("main.css");
 @import url("footer.css");
 @import url("modal.css");
@@ -7,12 +8,14 @@
 @import url("contact.css");
 @import url("uslugi.css");
 @import url("obj.css");
+@import url("catalog.css");
+@import url("swiper.css");
 
 :root {
   --title: 65px;
-  --btn: 16px;
+  --btn: 18px;
   --h1: 40px;
-  --h2: 18px;
+  --h2: 16px;
   --h3: 16px;
   --h3-card: 14px;
   --black: #333333;
@@ -56,6 +59,7 @@ html {
 * {
   user-select: text !important;
 }
+
 .catalog-title_l1 {
   display: none;
 }
@@ -95,12 +99,34 @@ body {
   scale: 0.9;
   transition: var(--tran-05);
 }
+.btn-light {
+  border-style: none;
+  width: fit-content;
+  padding: 4px 45px;
+  margin: 0 10px;
+  font-size: var(--btn);
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 4px;
+  border-color: var(--main);
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  cursor: pointer;
+  color: var(--main);
+  background: transparent;
+  transition: var(--tran-03);
+}
+.btn-light:hover {
+  color: #fff;
+  border-color: var(--dark);
+  background: var(--dark);
+}
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  max-width: 1920px;
+  max-width: 2000px;
   height: fit-content;
 }
 h1 {
@@ -187,6 +213,24 @@ li a {
     opacity: 0;
     transform: translateY(-5px);
     visibility: hidden;
+  }
+}
+
+@keyframes fadeInLeftMenu {
+  from {
+    max-height: 0;
+  }
+  to {
+    max-height: 100%;
+  }
+}
+
+@keyframes fadeOutLeftMenu {
+  from {
+    max-height: 100%;
+  }
+  to {
+    max-height: 0;
   }
 }
 
