--- a/css/menu.css
+++ b/css/menu.css
@@ -10,7 +10,7 @@
   height: 90px;
   padding: 0;
   background-color: #fff;
-  z-index: 999999;
+  z-index: 9999;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   box-shadow: #00000020 0 5px 10px;
@@ -24,6 +24,7 @@
   padding: 0 3%;
 }
 .menu-con {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -54,11 +55,26 @@
   font-family: "Montserrat";
   font-weight: 500;
   font-size: 16px;
+  border-top-left-radius: 4px;
   color: #fff;
   border-bottom-right-radius: 5px;
   background: var(--grad);
-  clip-path: polygon(2% 0%, 100% 0%, 100% 100%, 0% 100%);
+  /* transform: skewX(-30deg); */
+  /* clip-path: polygon(2% 0%, 100% 0%, 100% 100%, 0% 100%); */
   box-shadow: inset #00000050 5px 5px 10px;
+}
+.sub-menu-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  /* transform: skewX(30deg); */
+}
+.sub-menu-wrapper ul {
+  height: 100%;
 }
 .sub-menu ul {
   height: 100%;
@@ -129,11 +145,19 @@
   margin: 0 20px;
 }
 .lang-switch {
-  color: #fff;
+  color: #ffffff99 !important;
   font-weight: 400;
+  font-size: 12px !important;
   background: transparent !important;
   padding: 0 10px !important;
   margin: 0 !important;
+  padding: 0 5px !important;
+  transition: var(--tran-03);
+}
+.lang-switch.active {
+  color: #ffffff !important;
+  font-weight: 500;
+  font-size: 14px !important;
 }
 
 .about-btn::after {
@@ -203,7 +227,7 @@
   top: 100%;
   left: -20%;
   z-index: 999;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .sub-about-btn li {
@@ -261,33 +285,6 @@
   display: inline-block;
 }
 
-.search {
-  background: #ffffff33;
-  width: 150px;
-  border: none;
-  border-radius: 2px;
-  color: var(--black);
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  padding: 2px 10px;
-  margin: 4px;
-  transition: var(--tran-03);
-}
-.search:focus {
-  padding: 2px 30px;
-  width: 250px;
-  border-style: none !important;
-  border-width: 0 !important;
-  background: #ffffff80;
-}
-
-.search::placeholder {
-  color: #ffffff8f;
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-}
 .link-con {
   display: flex;
 }
@@ -308,6 +305,10 @@
   width: 100%;
   min-width: 300px;
 }
+.menu-categories li:nth-last-child(1) {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
 .menu-categories {
   position: relative;
 }
@@ -315,10 +316,12 @@
   background: #fff;
   color: var(--black);
 }
+
 .menu-categories li:hover {
   background: var(--main);
   color: #fff;
 }
+
 .menu-categories {
   position: absolute;
   top: 100%;
@@ -369,4 +372,113 @@
 }
 .catalog-btn::after:hover {
   rotate: 90deg;
+}
+
+.search {
+  background: #ffffff33;
+  width: 150px;
+  border: none;
+  border-radius: 2px;
+  color: var(--black);
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 2px 10px;
+  margin: 4px;
+  transition: var(--tran-03);
+}
+.search:focus {
+  padding: 2px 30px;
+  width: 400px;
+  border-style: none !important;
+  border-width: 0 !important;
+  background: #ffffffaf;
+}
+
+.search::placeholder {
+  color: #ffffff8f;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.resultsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: fit-content;
+  max-height: 0px;
+  opacity: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  background: #fff;
+  color: var(--black);
+  box-shadow: #00000020 0 5px 10px;
+  overflow: scroll;
+  transition: var(--tran-03);
+}
+.resultsContainer.active {
+  max-height: 500px;
+  opacity: 1;
+}
+.result-item {
+  display: flex;
+  width: 100%;
+  cursor: pointer;
+}
+.search-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  border-style: solid;
+  border-width: 0;
+  border-bottom-width: 1px;
+  border-top-width: 1px;
+  border-color: #00000020;
+  margin-left: 10px;
+}
+.search-item h1 {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
+  transition: var(--tran-03);
+}
+.search-item h1:hover {
+  color: var(--main);
+}
+.search-item h2 {
+  font-size: 14px;
+  font-weight: 400;
+}
+.search-item h3 {
+  font-size: 12px;
+  font-weight: 500;
+  color: var(--main);
+  text-align: end;
+  margin-right: 20px;
+}
+
+.search-photo {
+  width: 100px;
+  height: 70px;
+  overflow: hidden;
+}
+.search-photo img {
+  width: auto;
+  height: 100%;
+}
+.no-search {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+.no-search::before {
+  content: url(/assets/svg/no-search.svg);
+  margin-right: 20px;
+  opacity: 0.5;
 }
