--- a/css/modal.css
+++ b/css/modal.css
@@ -11,8 +11,8 @@
   z-index: 9999;
 }
 .modal-logo {
-  width: 200px;
-  margin-bottom: 30px;
+  width: 250px;
+  margin: 20px 0 40px 0;
 }
 
 .modal {
@@ -21,10 +21,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 500px;
+  width: 450px;
   height: 600px;
   z-index: 9999;
-  background: #f5f5f5;
+  background: #ffffff;
   border-radius: 10px;
   padding: 30px;
   box-shadow: #00000050 0 0 20px;
@@ -46,7 +46,7 @@
   padding: 10px 60px;
   margin: 10px 0;
   font-size: var(--btn);
-  border-radius: 3px;
+  border-radius: 4px;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   cursor: pointer;
@@ -100,6 +100,11 @@ input[type="checkbox"] {
   top: 30;
   right: 50;
   cursor: pointer;
+  opacity: 0.5;
+  transition: var(--tran-03);
+}
+.close-modal:hover {
+  opacity: 1;
 }
 
 .ban-check {
@@ -131,4 +136,14 @@ input[type="checkbox"] {
 }
 .ban-check h2 {
   color: #fff;
+}
+.link-form {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 0;
+}
+.link-form a {
+  margin: 0 0px;
 }
