--- a/css/main.css
+++ b/css/main.css
@@ -32,10 +32,17 @@
   flex-direction: column;
   align-items: start;
   justify-content: space-around;
-  height: 80%;
+  height: 70%;
   margin-left: 10%;
 }
-
+.slide-text h3 {
+  color: var(--main);
+  font-size: 18px;
+  font-weight: 400;
+}
+.slide-text button {
+  margin: 0;
+}
 .swiper-button-next,
 .swiper-button-prev {
   color: var(--main) !important;
@@ -96,7 +103,7 @@
   display: flex !important;
   flex-direction: column !important;
   align-items: center !important;
-  justify-content: end !important;
+  justify-content: center !important;
   width: 100%;
   cursor: pointer;
   height: 100%;
@@ -104,7 +111,7 @@
   border-width: 2px;
   border-color: var(--main);
   border-radius: 10px;
-  padding: 0 10px 10px 10px;
+  padding: 0 10px;
   transition: var(--tran-03);
   overflow: hidden;
 }
@@ -112,7 +119,8 @@
 .link-slide:hover {
   box-shadow: #00000040 0 0 20px;
   background: var(--main);
-  transition: var(--tran-03);
+  /* transition: var(--tran-03); */
+  transition: background 0.5s ease-in-out;
 }
 
 .link-slide img {
@@ -226,7 +234,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-bottom: 500px;
+  margin-bottom: 200px;
 }
 .advant {
   display: flex;
@@ -257,4 +265,154 @@
   font-weight: 500;
   color: var(--gray);
   line-height: 1.4;
+}
+
+.main-form-con {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 10% 8%;
+  background-position: 80%;
+  background-size: 50%;
+  background-repeat: no-repeat;
+}
+.main-form-description {
+  width: 100%;
+  border-style: solid;
+  border-width: 0px;
+  border-left-width: 3px;
+  border-color: var(--main);
+  padding: 0 50px;
+}
+.main-form-description h1 {
+  text-transform: uppercase;
+}
+.main-form-description h2 {
+  width: 70%;
+  font-size: 19px;
+  line-height: 1.5;
+  margin: 50px 0;
+}
+.main-form-btn .btn-light::before {
+  content: url(/assets/svg/link/wt.svg);
+  margin-right: 10px;
+}
+.main-form-btn {
+  display: flex;
+}
+.main-form-btn {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.main-form input {
+  background: #ebebeb;
+  color: var(--black);
+  margin: 0 0 15px 0;
+  width: 100%;
+  font-weight: 500;
+}
+.main-form input:hover {
+  background: #ebebeb;
+  color: var(--black);
+}
+.main-form input::placeholder {
+  color: #979797;
+}
+.main-form input:active {
+  scale: 1;
+}
+.main-form-btn .btn {
+  margin: 0;
+  width: 55%;
+}
+.main-form-btn .btn-light {
+  display: flex;
+  width: 40%;
+}
+.main-form-btn {
+  margin: 10px 0;
+}
+.partners-con {
+  display: flex;
+  flex-direction: column;
+  padding: 0 5%;
+}
+.title-heading-con {
+  width: 100%;
+  display: flex;
+  align-items: start;
+}
+.title-heading {
+  max-width: fit-content;
+  border-style: solid;
+  border-width: 0 0 2px 0;
+  border-color: var(--main);
+  padding-bottom: 20px;
+}
+/* .title-heading h1 {
+  text-transform: uppercase;
+} */
+.partners-description {
+  display: flex;
+  flex-direction: column;
+  border-style: solid;
+  border-width: 0 2px 0 0;
+  border-color: var(--main);
+  padding-right: 20px;
+}
+.partners-description h2 {
+  text-align: end;
+}
+.partners-description h2 span {
+  color: var(--main);
+  font-weight: 600;
+  font-size: 18px;
+}
+.partners-title {
+  display: flex;
+  justify-content: space-between;
+}
+.brendMainSwiper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  background: #00000005;
+  height: 300px;
+  margin-top: 50px;
+}
+
+.brend-slide {
+  display: flex !important;
+  align-items: center;
+  justify-content: center !important;
+  width: auto;
+  height: 100% !important;
+}
+.brend-slide img {
+  object-fit: contain;
+  height: 100%;
+  max-height: 100px;
+  margin: auto;
+}
+.anim-left {
+  transform: translateX(20%);
+  opacity: 0;
+  transition: var(--tran-05);
+}
+.anim-left.show {
+  opacity: 1;
+  transform: translateX(0);
+  transition: var(--tran-05);
+}
+.anim-up {
+  transform: translateY(20%);
+  opacity: 0;
+  transition: var(--tran-05);
+}
+.anim-up.show {
+  opacity: 1;
+  transform: translateY(0);
+  transition: var(--tran-05);
 }
