--- a/css/news.css
+++ b/css/news.css
@@ -5,9 +5,7 @@
   justify-content: center;
   padding: 0 5%;
 }
-.news {
-  margin: 80px 0;
-}
+
 .news-swiper {
   display: flex !important;
   flex-direction: column !important;
@@ -67,9 +65,34 @@
 .news-text h1 {
   color: var(--main);
 }
-.news-text h2 {
+/* .news-text h2 {
   width: 90%;
+  overflow: scroll;
+  height: 300px;
+} */
+.news-text h2 {
+  width: 100%;
+  max-height: 300px; /* Ограничиваем высоту блока, чтобы контент не выходил за границы */
+  overflow-y: auto; /* Включаем вертикальную прокрутку */
+  padding-right: 10%;
 }
+
+.news-text h2::-webkit-scrollbar {
+  width: 3px; /* Ширина скроллбара */
+}
+
+.news-text h2::-webkit-scrollbar-thumb {
+  background-color: #00000020;
+  border-radius: 10px;
+  cursor: grab;
+}
+
+.news-text::-webkit-scrollbar-track {
+  background: transparent; /* Фон полосы прокрутки */
+}
+/* .news-text h2::-webkit-scrollbar {
+  width: 5px !important;
+} */
 .news-text h2 span {
   color: var(--main);
   opacity: 0.7;
