--- a/css/contact.css
+++ b/css/contact.css
@@ -34,7 +34,7 @@
   cursor: default;
 }
 .about-description {
-  margin: 5%;
+  margin: 5% 10%;
   border-style: solid;
   border-width: 0 0 0 2px;
   border-color: var(--main);
@@ -61,10 +61,10 @@
   flex-direction: column;
   justify-content: center;
 }
-.progress-con h1 {
+/* .progress-con h1 {
   font-size: 25px;
   margin: 20px 0;
-}
+} */
 
 .progress-item {
   display: flex;
@@ -84,4 +84,244 @@
 }
 .progress-text h2 {
   font-size: 18px;
+}
+/* ----------------------------------------- */
+
+.cont-con {
+  display: flex;
+  width: 100%;
+  height: 600px;
+  margin: 100px 0;
+}
+.map-yan {
+  width: 100%;
+  background: var(--gray);
+  border-radius: 0 10px 10px 0;
+  overflow: hidden;
+}
+
+.cont {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  width: 50%;
+  padding: 0% 5%;
+}
+.cont-title div {
+  height: 2px;
+  width: 150px;
+  background: var(--main);
+}
+.cont-item {
+  margin: 3% 2% 3% 0;
+  width: 250px;
+  cursor: default;
+}
+.cont-item-con {
+  display: flex;
+  flex-wrap: wrap;
+}
+.cont-item h2 {
+  font-size: 22px;
+  cursor: default;
+}
+.cont-item h3 {
+  font-size: 18px;
+  color: var(--gray);
+  cursor: default;
+}
+.adres-con {
+  margin-top: 50px;
+}
+.adres-con h2 {
+  font-size: 22px;
+  color: var(--black);
+  cursor: default;
+}
+.adres-con h3 {
+  font-size: 18px;
+  color: var(--gray);
+  line-height: 1.5;
+  cursor: default;
+}
+.adres-con span {
+  font-size: 15px;
+  color: var(--gray);
+  line-height: 2;
+}
+.copy {
+  display: flex;
+  align-items: center;
+}
+.copy::after {
+  content: url(/assets/svg/copy.svg);
+  margin-left: 20px;
+  cursor: pointer;
+  transition: var(--tran-03);
+}
+.copy:active::after {
+  scale: 0.9;
+}
+.recvi-con-con {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-content: center;
+  padding: 0 10%;
+}
+.recvi-con {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 1200px;
+  height: 600px;
+  box-shadow: #00000021 0 0 20px;
+  padding: 5% 5%;
+  border-radius: 10px;
+}
+.recvi-title-con {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.recvi-title-con h1 {
+  font-weight: 500;
+  line-height: 1.8;
+  color: var(--main);
+}
+.recvi-title-con h1 span {
+  font-weight: 500;
+  color: var(--gray);
+  line-height: 1.5;
+  font-size: 18px;
+}
+.recvi-title-con div img {
+  width: 30px;
+  cursor: pointer;
+  margin: 0 10px;
+  transition: var(--tran-03);
+}
+.recvi-title-con div img:hover {
+  scale: 0.9;
+  transition: var(--tran-03);
+}
+.recvi {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.recvi-1 {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  height: 100%;
+}
+.recvi-2 {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  height: 100%;
+}
+.recvi-11 {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.recvi-12 {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.recvi-13 {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.recvi-21 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+.recvi-22 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+.recvi h2 {
+  font-size: 20px;
+  line-height: 2;
+  color: var(--black);
+  cursor: default;
+}
+.recvi span {
+  font-size: 18px;
+  line-height: 2;
+  color: var(--gray);
+  cursor: default;
+}
+/* 
+.recvi-div {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 0;
+}
+.recvi-div div h2 {
+  font-size: 20px;
+  line-height: 2;
+  color: var(--black);
+  cursor: default;
+}
+.recvi-div div span {
+  font-size: 18px;
+  line-height: 2;
+  color: var(--gray);
+  cursor: default;
+} */
+.delivry-con {
+  padding: 0 10%;
+}
+.delivry {
+  display: flex;
+}
+.delivry {
+  width: 100%;
+  display: flex;
+  align-items: end;
+  margin-bottom: 50px;
+}
+.delivry-img {
+  width: 30%;
+}
+.delivry-text {
+  width: 60%;
+}
+.politica-con {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 0 10%;
+  margin-bottom: 100px;
+}
+.politica-con h2 {
+  line-height: 1.8;
+}
+.politica-con h2 a {
+  color: var(--main);
+  cursor: pointer;
+}
+
+#readMoreBtn {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  border-style: none;
+  color: var(--main);
+  background: transparent;
+  font-size: 18px;
+  cursor: pointer;
 }
