--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,7 @@
   left: 0;
   transform: translateX(-100%);
   transition: var(--tran-05);
+  z-index: 999;
 }
 .tip.active {
   transform: translateX(0);
@@ -234,7 +235,6 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-bottom: 200px;
 }
 .advant {
   display: flex;
@@ -337,12 +337,14 @@
 .partners-con {
   display: flex;
   flex-direction: column;
-  padding: 0 5%;
+  padding: 0 10%;
 }
 .title-heading-con {
   width: 100%;
   display: flex;
-  align-items: start;
+  align-items: center;
+  justify-content: space-between;
+  margin: 80px 0 60px 0;
 }
 .title-heading {
   max-width: fit-content;
@@ -354,14 +356,23 @@
 /* .title-heading h1 {
   text-transform: uppercase;
 } */
-.partners-description {
+.title-heading-con h2 {
   display: flex;
   flex-direction: column;
   border-style: solid;
   border-width: 0 2px 0 0;
   border-color: var(--main);
   padding-right: 20px;
+  height: fit-content;
+  text-align: end;
+  font-size: 20px;
 }
+.title-heading-con h2 span {
+  color: var(--main);
+  font-weight: 600;
+  font-size: 18px;
+}
+/* 
 .partners-description h2 {
   text-align: end;
 }
@@ -369,7 +380,7 @@
   color: var(--main);
   font-weight: 600;
   font-size: 18px;
-}
+} */
 .partners-title {
   display: flex;
   justify-content: space-between;
