--- a/css/master.css
+++ b/css/master.css
@@ -1,15 +1,13 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"); */
 @import url("menu.css");
-/* @import url("menu2.css"); */
 @import url("main.css");
 @import url("footer.css");
 @import url("modal.css");
 @import url("media.css");
 @import url("contact.css");
-@import url("uslugi.css");
 @import url("obj.css");
 @import url("catalog.css");
-@import url("swiper.css");
+/* @import url("swiper.css"); */
 @import url("news.css");
 
 :root {
@@ -61,12 +59,6 @@ html {
   user-select: text !important;
 }
 
-.catalog-title_l1 {
-  display: none;
-}
-.text-cat-mob {
-  display: flex;
-}
 a {
   text-decoration: none;
   color: var(--black);
@@ -308,24 +300,25 @@ li a {
 
 .container-404 {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 10%;
-  width: 80vw;
-  height: auto;
+  padding-top: 10%;
+  width: 100vw;
+  height: 100vh;
   max-height: 1000px;
   background-image: url(/assets/img/404.png);
   background-position: center;
-  background-size: 80%;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 .container-404 h1 {
   font-size: 70px;
-  color: var(--main);
+  color: var(--black);
 }
 .container-404 h2 {
   font-size: 30px;
-  color: var(--main);
+  color: var(--black);
 }
 .btn-404 {
   margin: 10%;
