--- a/css/catalog.css
+++ b/css/catalog.css
@@ -375,8 +375,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-height: 50%;
-  height: 100%;
   position: absolute;
   bottom: 100%;
   opacity: 0;
@@ -385,13 +383,29 @@
   transition: var(--tran-03);
 }
 .download-cat ul li {
-  background: #dbdbdb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  background: #ffffff;
   width: 100%;
   height: 100%;
   cursor: pointer;
-  margin: 1px 0;
   transition: var(--tran-03);
+  font-weight: 500;
 }
 .download-cat ul li:hover {
-  background: #c9c9c9;
+  background: var(--main);
+}
+.download-cat ul li:hover h2 {
+  color: #fff;
+}
+.download-cat ul li::after {
+  content: url(/assets/svg/download-white.svg);
+  margin-left: 10px;
+}
+.pdf-down {
+  position: relative;
+  display: flex;
+  align-items: center;
 }
