--- a/css/master.css
+++ b/css/master.css
@@ -7,7 +7,7 @@
 @import url("contact.css");
 @import url("obj.css");
 @import url("catalog.css");
-/* @import url("swiper.css"); */
+@import url("admin.css");
 @import url("news.css");
 
 :root {
